--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
     <title>Sneakers</title>
 </head>
 <body>
-       <div class="header">
-        <div class="container">
-        <div class="navbar">
+    <div class="navbar">
             <div class="logo">
                 <img src="img/logo.png" width="100px">
             </div>
@@ -37,8 +35,6 @@
                 <img src="img/mainimg.png">
             </div>
         </div>
-       </div>
-    </div>
     <div class="clients">
         <ul>
             <li><img src="img/nike-8.svg" alt=""></li>
@@ -49,8 +45,10 @@
             <li><img src="img/puma-logo.svg" alt=""></li>
         </ul>
     </div>
+<div class="new-arrivals">
 <div class="small-container">
     <h2 class="title">New Arrivals</h2>
+    </div>
     <div class="row">
         <div class="col4">
             <img src="img/9.jpeg">
@@ -101,6 +99,7 @@
             <p>$110.00</p>
         </div>
     </div>
+</div>
     <div class="sale">
         <div class="col2">
             <img src="img/nike-shoes-transparent.png">
@@ -113,7 +112,8 @@
             <a href="" class="btn">Shop Now &#8594;</a>
         </div>
     </div>
-    <h2 class="title">Young's Favourite</h2>
+   <div class="young-fav">
+     <h2 class="title">Young's Favourite</h2>
     <div class="row1">
         <div class="col5">
             <img src="img/9.jpeg">
@@ -142,17 +142,17 @@
             <button class="btn">Explore Now</button>
         </div>
 </div>
-<div class="hero1">
+   </div>
+<div class="download">
     <div class="col2">
         <h1>DOWNLOAD APP &<br>GET THE VOUCHER!</h1>
         <p>The next generation of Air technology is here.</p>
         <a href="" class="btn">Shop Now &#8594;</a>
     </div>
-    <div class="col2">
+    <div class="col2 right-class">
         <img src="img/mobile app.png">
     </div>
 </div>
-
 <div class="testimonial">
     <div class="small-container">
         <div class="row">
