--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 <div class="download">
     <div class="col2">
         <h1>DOWNLOAD APP &<br>GET THE VOUCHER!</h1>
-        <p>The next generation of Air technology is here.</p>
+        <p>Get 30% off for first transaction using<br> Randovision mobile app for now.</p>
         <a href="" class="btn">Shop Now &#8594;</a>
     </div>
     <div class="col2 right-class">
