--- a/index.html
+++ b/index.html
@@ -15,24 +15,39 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="">Home</a></li>
-                    <li><a href="">Products</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="products.html">Products</a></li>
                     <li><a href="">About</a></li>
                     <li><a href="">Contact</a></li>
+                    <a href="signup.html">
                     <li><button class="btn">Sign UP</button></li>
+                    </a>
 
                 </ul>
+                <div class="toggle_btn">
+                    <i class="fa fa-bars"></i>
+                </div>
             </nav>
+            <div class="dropdown_menu">
+                <li><a href="index.html">Home</a></li>
+                    <li><a href="products.html">Products</a></li>
+                    <li><a href="">About</a></li>
+                    <li><a href="">Contact</a></li>
+                    <a href="signup.html">
+                    <li><button class="btn">Sign UP</button></li>
+                    </a>
+            </div>
             
         </div>
         <div class="hero">
             <div class="col2">
                 <h1>Feel The Unreal<br>AIR MAX DN</h1>
                 <p>The next generation of Air technology is here.</p>
-                <a href="" class="btn">Shop Now &#8594;</a>
+                <a href="products.html" class="btn">Shop Now &#8594;</a>
             </div>
-            <div class="col2">
+            <div class="col1">
                 <img src="img/mainimg.png">
+                <a href="products.html" class="btn">Shop Now &#8594;</a>
             </div>
         </div>
     <div class="clients">
@@ -103,13 +118,14 @@
     <div class="sale">
         <div class="col2">
             <img src="img/nike-shoes-transparent.png">
+            <a href="" class="btn">Shop Now &#8594;</a>
         </div>
-        <div class="col2">
+        <div class="col1">
             <h1>PAYDAY<br>SALE NOW</h1>
             <p>Spend minimal $180 get 30% off voucher code<br> for your next purchase<br><br></p>
             <h2>1 JUNE - 10 JUNE 2024</h2>
             <p>*Terms & Conditions apply</p>
-            <a href="" class="btn">Shop Now &#8594;</a>
+            <a href="products.html" class="btn">Shop Now &#8594;</a>
         </div>
     </div>
    <div class="young-fav">
@@ -147,10 +163,11 @@
     <div class="col2">
         <h1>DOWNLOAD APP &<br>GET THE VOUCHER!</h1>
         <p>Get 30% off for first transaction using<br> Randovision mobile app for now.</p>
-        <a href="" class="btn">Shop Now &#8594;</a>
+        <img src="img/pngwing.com.png">
+        <img src="img/google-play-badge.png">
     </div>
-    <div class="col2 right-class">
-        <img src="img/mobile app.png">
+    <div class="col2">
+        <img class="mobile-view" src="img/mobile app.png">
     </div>
 </div>
 <div class="testimonial">
@@ -247,5 +264,15 @@
         </div>
     </div>
 </div>
+
+<script>
+    const toggleBtn= document.querySelector('.toggle_btn')
+    const toggleBtnIcon= document.querySelector('.toggle_btn i')
+    const dropDownMenu= document.querySelector('.dropdown_menu')
+   
+    toggleBtn.onclick = function (){
+        dropDownMenu.classList.toggle('open')
+    }
+</script>
     </body>
 </html>
