--- a/index.html
+++ b/index.html
@@ -76,6 +76,9 @@
                 <i class="fa fa-star-o"></i>
             </div>
             <p>$110.00</p>
+            <a href="products.html">
+                <button class="btn">Add to Cart</button>
+            </a>
         </div>
         <div class="col4">
             <img src="img/8.jpeg">
@@ -88,6 +91,9 @@
                 <i class="fa fa-star-o"></i>
             </div>
             <p>$110.00</p>
+            <a href="products.html">
+                <button class="btn">Add to Cart</button>
+            </a>
         </div>
         <div class="col4">
             <img src="img/7.jpeg">
@@ -100,6 +106,9 @@
                 <i class="fa fa-star-o"></i>
             </div>
             <p>$110.00</p>
+            <a href="products.html">
+                <button class="btn">Add to Cart</button>
+            </a>
         </div>
         <div class="col4">
             <img src="img/13.jpeg">
@@ -112,6 +121,9 @@
                 <i class="fa fa-star-o"></i>
             </div>
             <p>$110.00</p>
+            <a href="products.html">
+                <button class="btn">Add to Cart</button>
+            </a>
         </div>
     </div>
 </div>
@@ -142,7 +154,9 @@
                 <i class="fa fa-star-o"></i>
             </div>
             <p>$110.00</p>
+            <a href="products.html">
             <button class="btn">Explore Now</button>
+        </a>
         </div>
         <div class="col5">
             <img src="img/8.jpeg">
@@ -155,7 +169,9 @@
                 <i class="fa fa-star-o"></i>
             </div>
             <p>$110.00</p>
+            <a href="products.html">
             <button class="btn">Explore Now</button>
+        </a>
         </div>
 </div>
    </div>
@@ -175,7 +191,7 @@
         <div class="row">
             <div class="col3">
                 <i class="fa fa-quote-left"></i>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem, quos temporibus consectetur atque laboriosam veniam.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem odio tempora nesciunt. Rerum deleniti voluptatibus, provident quis quae incidunt similique, mollitia possimus est temporibus laudantium!</p>
                 <div class="rating">
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
@@ -188,7 +204,7 @@
             </div>
             <div class="col3">
                 <i class="fa fa-quote-left"></i>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, natus sunt. Nobis vel reprehenderit distinctio!.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A possimus minus unde provident repellendus numquam praesentium, recusandae incidunt perferendis magnam quo nesciunt, deserunt impedit error.</p>
                 <div class="rating">
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
@@ -201,7 +217,7 @@
             </div>
             <div class="col3">
                 <i class="fa fa-quote-left"></i>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatibus blanditiis aspernatur inventore natus laudantium totam.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit enim, perspiciatis dolorum mollitia ex optio iusto quibusdam aspernatur quasi voluptates eligendi incidunt aut id obcaecati quasi voluptates eligendi .</p>
                 <div class="rating">
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
@@ -216,9 +232,9 @@
     </div>
 </div>
 <div class="call-to-action">
-    <h1> Sample Heading</h1>
-    <h4> Sample text</h4>
-    <a href="">add your email <button>send</button></a>
+    <h1>JOIN SHOPPING COMMUNITY TO<br>GET MONTHLY PROMO</h1>
+    <h4>Type your email down below and be young wild generation</h4>
+    <a href="">Add your email here<button>send</button></a>
 </div>
 <div class="footer">
     <div class="container">
