--- a/products.html
+++ b/products.html
@@ -127,8 +127,8 @@
 
 
     <div class="call-to-action">
-        <h1> Sample Heading</h1>
-        <h4> Sample text</h4>
+        <h1>JOIN SHOPPING COMMUNITY TO<br>GET MONTHLY PROMO</h1>
+        <h4>Type your email down below and be young wild generation</h4>
         <a href="">add your email <button>send</button></a>
     </div>
     <div class="footer">
