--- a/signup.html
+++ b/signup.html
@@ -50,12 +50,19 @@
             <button type="submit">Signup</button>
         </form>
     </div>
-
-    <div class="call-to-action">
-        <h1> Sample Heading</h1>
-        <h4> Sample text</h4>
-        <a href="">add your email <button>send</button></a>
+    <div class="signup_form">
+        <h2>Signup</h2>
+        <form action="#" method="post">
+            <input type="text" name="firstName" placeholder="First Name" required>
+            <input type="text" name="lastName" placeholder="Last Name" required>
+            <input type="email" name="email" placeholder="Email" required>
+            <input type="tel" name="phone" placeholder="Phone Number" required>
+            <input type="password" name="password" placeholder="Password" required>
+            <input type="password" name="confirmPassword" placeholder="Confirm Password" required>
+            <button type="submit">Signup</button>
+        </form>
     </div>
+
     <div class="footer">
         <div class="container">
             <div class="row">
